--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,3 +1,4 @@
 <ul class="topbar">
 	<a href="/me"><li><u>A</u>bout</li></a>
+	<a href="https://blog.5annviersary.dev"><li><u>A</u>Blog</li></a>
 </ul>
