--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,4 +1,5 @@
 <ul class="topbar">
 	<a href="/me"><li><u>A</u>bout</li></a>
 	<a href="https://blog.5anniversary.dev"><li><u>B</u>log</li></a>
+	<a href="https://github.com/5anniversary"><li><u>G</u>it</li></a>
 </ul>
