--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="/assets/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon">
+	<script data-ad-client="ca-pub-8622489217418107" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<script src="/assets/js/highlight.pack.js"></script>
 	<script>hljs.initHighlightingOnLoad();</script>
 </head>
